# genies

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  application.yml  expand.txt  expanded_auth_admin.txt  expanded_dto.txt  model.conf  policy.csv  review_diff.txt  test_datetime_schema.rs
crates/auth/: Cargo.toml  README.md  README.zh-CN.md
crates/auth-admin/: Cargo.toml  Dockerfile  README.md  README.zh-CN.md  application.yml
crates/auth-admin/migrations/: V10__create_auth_app_instances.sql  V11__create_auth_admin_settings.sql  V12__create_auth_admin_user_2fa.sql  V13__create_auth_oauth_tables.sql  V1__create_auth_admin_users.sql  V2__create_auth_admin_roles.sql  V3__create_auth_admin_permissions.sql  V4__create_auth_admin_departments.sql  V5__create_auth_admin_user_roles.sql  V6__create_auth_admin_role_permissions.sql  V7__create_message_table.sql  V8__create_auth_applications.sql  V9__create_auth_admin_user_departments.sql
crates/auth-admin/src/: lib.rs  main.rs
crates/auth-admin/src/application/: app_service.rs  dto.rs  mod.rs  oauth_client_service.rs  oauth_dto.rs  oauth_token_service.rs  service.rs  settings_service.rs  two_factor_service.rs
crates/auth-admin/src/domain/: mod.rs
crates/auth-admin/src/infrastructure/: crypto.rs  migration.rs  mod.rs
crates/auth-admin/src/interfaces/: admin_ui.rs  internal_auth.rs  mod.rs  router.rs
crates/auth-admin/static/: index.html
crates/auth-admin/static/assets/: ApplicationList-3EDBmKiL.css  ApplicationList-7rZeprN9.js  ApplicationList-CEVJjb0k.js  ApplicationList-CHUhDg7V.js  ApplicationList-CMQMWdmk.js  ApplicationList-CSNByP0T.js  ApplicationList-CtAqmf7y.css  ApplicationList-DK_vvyxl.js  ApplicationList-mqclMriv.js  ApplicationPermission-7UghRlB4.css  ApplicationPermission-B6DfWn51.js  ApplicationPermission-BS509A2n.js  ApplicationPermission-BePkVSXF.css  ApplicationPermission-BfYMPD_b.js  ApplicationPermission-CMOOCa9n.js  ApplicationPermission-CxUVbFMo.js  ApplicationPermission-DIAor5yq.js  ApplicationPermission-DwTKtXGM.js  DepartmentManager-BXqqWe2A.js  DepartmentManager-CEFu0JNA.js  DepartmentManager-DE12YTHr.css  DepartmentManager-DJrqeaWM.js  DepartmentManager-D_jemxME.css  DepartmentManager-DlT1gC6M.js  DepartmentManager-NzCElR8j.js  DepartmentManager-WFrXDK3F.js  DepartmentManager-fVTy0LXw.css  DepartmentManager-lqfv6RWe.js  Login-Bcgfgm_w.js  Login-BclVTV1x.js  Login-Bdtrww51.js  Login-Bf4hXlBt.js  Login-BwYdXoou.css  Login-C90zNYyk.css  Login-CoTqrx6u.css  Login-DdjyZPwR.js  Login-DrC5CdJT.js  Login-XEzTmNJJ.js  OAuthClientManager-BMCF1msJ.css  OAuthClientManager-DeJgCJ3_.js  (+51 more)
crates/auth-admin/web/: index.html  package-lock.json  package.json  tsconfig.json
crates/auth-admin/web/src/: App.vue  main.ts
crates/auth/migrations/: V1__create_casbin_rules.sql  V2__create_casbin_model.sql  V3__create_auth_api_schemas.sql  V4__seed_casbin_model_and_policies.sql  V5__add_description_fields_to_auth_api_schemas.sql  V6__enlarge_field_type_column_in_auth_api_schemas.sql
crates/auth/src/: adapter.rs  admin_api.rs  admin_ui.rs  auth_middleware.rs  enforcer_manager.rs  event.rs  event_handler.rs  lib.rs  main.rs  middleware.rs  models.rs  oauth2_middleware.rs  schema_extractor.rs  service_registry.rs  startup_sync.rs  version_sync.rs
crates/auth/static/: index.html
crates/auth/static/assets/: GroupManager-C8xdS4Xt.css  GroupManager-DlTpEiz2.js  GroupManager-DwlETXMA.js  ModelConfig-D7noHAe5.css  ModelConfig-DT8YS84A.js  ModelConfig-alAuXX79.js  PolicyManager-BOL0ehlT.js  PolicyManager-ChN1ZzAf.css  PolicyManager-ohO1XbmY.js  RoleManager-BvhYumzG.js  RoleManager-CntRFVJ3.css  RoleManager-HBBud0EF.js  SchemaExplorer-D0-V3nmB.js  SchemaExplorer-D6C9qpTw.css  SchemaExplorer-DjProueH.js  index-B46x8v6W.js  (+2 more)
crates/auth/web/: index.html  package-lock.json  package.json  vite.config.ts
crates/cache/: Cargo.toml  README.md  README.zh-CN.md
crates/cache/src/: cache_service.rs  lib.rs  mem_service.rs  redis_service.rs
crates/cdc/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  KunPengDockerfile.euler  application.yml
crates/cdc/src/: dapr_message_box.rs  error.rs  lib.rs  main.rs  message.rs  salvo.rs
crates/config/: Cargo.toml  README.md  README.zh-CN.md
crates/config/examples/: README.md  config_examples.rs
crates/config/src/: app_config.rs  lib.rs  log_config.rs
crates/context/: Cargo.toml  README.md  README.zh-CN.md
crates/context/src/: app_context.rs  auth.rs  lib.rs  request_token.rs
crates/core/: Cargo.toml  README.md  README.zh-CN.md
crates/core/src/: condition.rs  error.rs  id_gen.rs  jwt.rs  lib.rs  page.rs
crates/dapr/: Cargo.toml  README.md  README.zh-CN.md
crates/dapr/src/: cloud_event.rs  lib.rs  pubsub.rs  topicpoint.rs
crates/ddd/: Cargo.toml  README.md  README.zh-CN.md
crates/ddd/src/: DomainEventPublisher.rs  event.rs  lib.rs  message.rs
crates/ddd_dapr_derive/: Cargo.toml  README.md
crates/ddd_dapr_derive/src/: aggregate_type.rs  config_type.rs  enu.rs  event_type.rs  helpers.rs  lib.rs  topic.rs  wrapper.rs
crates/genies/: Cargo.toml  README.md  README.zh-CN.md
crates/genies/src/: error.rs  lib.rs
crates/genies/tests/: test_condition.rs  test_jwt.rs
crates/genies_derive/: Cargo.toml  LICENSE  README.md  README.zh-CN.md
crates/genies_derive/examples/: config_examples.rs
crates/genies_derive/src/: aggregate_type.rs  casbin.rs  config_core_type.rs  config_shared.rs  config_type.rs  enu.rs  event_type.rs  helpers.rs  lib.rs  remote.rs  topic.rs  wrapper.rs
crates/k8s/: Cargo.toml  README.md  README.zh-CN.md
crates/k8s/src/: lib.rs
crates/test/: Cargo.toml  README.md  README.zh-CN.md
crates/test/src/: assertions.rs  config.rs  db.rs  diff.rs  lib.rs  mutation.rs
examples/: Cargo.toml  application.yml
examples/integration/: Cargo.toml  application.yml  docker-compose.yml  expanded.txt
examples/integration/src/: auth_tests.rs  e2e_business_tests.rs  lib.rs  main.rs  topic_business_tests.rs  topic_tests.rs
examples/topic/: Cargo.toml  application.yml
examples/topic/src/: DeviceUseEvent.rs  UseDeviceListeners.rs  lib.rs  main.rs
(+183 files in other folders)
