[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.6.0"
edition = "2021"
authors = ["tdcare"]
license = "MIT"
repository = "https://github.com/tdcare/genies"

[workspace.dependencies]
genies = {version = "1.6.0", path = "crates/genies" }
genies_core = {version = "1.6.0", path = "crates/core" }
genies_derive = {version = "1.6.0", path = "crates/genies_derive" }
genies_config = {version = "1.6.0", path = "crates/config" }
genies_context = {version = "1.6.0", path = "crates/context" }
genies_cache = {version = "1.6.0", path = "crates/cache" }
genies_dapr = {version = "1.6.0", path = "crates/dapr" }
genies_ddd = {version = "1.6.0", path = "crates/ddd" }
genies_k8s = { version = "1.6.0", path = "crates/k8s" }
genies_auth = { version = "1.6.0", path = "crates/auth" }


log = "0.4.17"
thiserror = "1.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9"


rbatis = {version="4.8",features = ["debug_mode"]} #必选
rbs = { version = "4.7"}
rbdc = { version = "4.7", default-features = false }
rbdc-mysql = { version = "4.7" }
rbdc-pg = { version = "4.7" }
rbdc-sqlite = { version = "4.7" }
rbdc-mssql = { version = "4.7" }
rbdc-oracle = { version = "0.7" }
rbdc-tdengine = { version = "4.5" }

tracing = "0.1"
tracing-subscriber ={version= "0.3",features = ["env-filter"]}


tokio = { version = "1.22.0", features = ["full"] }



salvo = { version = "0.89", features = ["websocket","rustls","oapi","affix-state"] } #必选
async-trait = "0.1.59"

inventory = "0.3"

# 数据库迁移框架
flyway = "0.4.0"
flyway-rbatis = "0.4.0"