[workspace]
members = ["*"]
exclude = [ "target", "temp"]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
authors = ["tdcare"]
license = "MIT"
repository = "https://github.com/tdcare/genies"

[workspace.dependencies]

genies = { path = "../crates/genies" }
genies_derive = { path = "../crates/genies_derive" }



log = "0.4.17"
thiserror = "1.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9"


rbatis = {version="4.5",features = ["debug_mode"]} #必选
rbs = { version = "4.5"}
rbdc = { version = "4.5", default-features = false }
rbdc-mysql={version="4.5"}

tracing = "0.1"
tracing-subscriber ={version= "0.3",features = ["env-filter"]}


tokio = { version = "1.22.0", features = ["full"] }


salvo = {version="0.79.0",features=["rustls"]}

async-trait = "0.1.59"

inventory = "0.3"
anyhow = "1.0.66"