[package]
name = "genies_auth_admin"
version = "1.8.1"
authors = ["tdcare"]
edition = "2021"
license = "MIT"
description = "统一认证管理服务 - 用户、角色、权限、组织架构管理"
keywords = ["auth", "admin", "casbin", "dapr"]
documentation = "https://docs.rs/genies_auth_admin"
exclude = ["web/node_modules", "web/src", "web/index.html", "web/package.json", "web/package-lock.json", "web/tsconfig.json", "web/vite.config.ts"]

[lib]
name = "genies_auth_admin"
path = "src/lib.rs"

[[bin]]
name = "auth-admin"
path = "src/main.rs"

[dependencies]
genies = { workspace = true }
genies_core = { workspace = true }
genies_derive = { workspace = true }
genies_config = { workspace = true }
genies_context = { workspace = true }
genies_dapr = { workspace = true }
genies_ddd = { workspace = true }
genies_auth = { workspace = true }
genies_cache = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

log = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

salvo = { workspace = true }

rbatis = { workspace = true }
rbs = { workspace = true }
rbdc = { workspace = true }
rbdc-mysql = { workspace = true }

bcrypt = "0.15"
jsonwebtoken = "7.2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
casbin = { version = "2.10.1", features = ["runtime-tokio"] }

# 数据库迁移
flyway = { workspace = true }
flyway-rbatis = { workspace = true }

# 静态文件嵌入
rust-embed = { version = "8" }
mime_guess = "2"
