[package]
name = "genies_auth"
# version.workspace = true
version = "1.5.0"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 的 auth 库"
keywords = ["dominevent", "aggregate", "ddd","dapr","casbin"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies_context"
readme = "README.zh-CN.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
genies_core = { workspace = true }
genies_derive = { workspace = true }
genies_config = { workspace = true }
genies_cache = { workspace = true }
genies_context = { workspace = true }
genies = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

log = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

lazy_static = "1.4.0"
futures = "0.3.25"

salvo = { workspace = true, features = ["affix-state"] }

rbatis = { workspace = true } #必选
rbs = { workspace = true }
rbdc = { workspace = true }
rbdc-mysql = { workspace = true }

casbin = { version = "2.10.1", features = ["runtime-tokio"] }
anyhow = "1.0"

rust-embed = { version = "8" }
mime_guess = "2"

# 数据库迁移框架
flyway = { workspace = true }
flyway-rbatis = { workspace = true }

[dev-dependencies]

