[package]
name = "cdc"
version = "1.2.1"
authors = ["tzw <tzw@tdcare.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }

# uuid = { version = "0.7", features = ["serde", "v4"] }

rbs = "4.7"
rbdc={version="4.7"}
rbdc-mysql={version="4.7"}
#rbatis orm dep
rbatis = { version = "4.8", features = ["debug_mode"] }


fastdate = "0.1.30"



#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
#log
log = "0.4"
# fast_log = { version="1.6.12", features = ["lz4","zip", "gzip"]}

tracing = "0.1"
tracing-subscriber ={version= "0.3",features = ["env-filter"]}

#web server
salvo = "0.63"


#actix-web = "4.0"
#actix-http = "3"


tokio = { version = "1", features = ["full"] }
# delay_timer = "0.11.6"

reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
sha2 = "0.10"
base64ct = {version="1.3.3", features=["alloc"]}

yaml-rust = "0.4"
