[package]
name = "genies_config"
version = "1.0.0"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 的 config 库"
keywords = ["dominevent", "aggregate", "ddd","dapr"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies_config"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
genies_core = { workspace = true }
genies_derive = { workspace = true }

serde = {workspace =true}
serde_yaml = {workspace =true}

log = {workspace =true}


tokio = { workspace = true }

[dev-dependencies]

