[package]
name = "genies_core"
# version.workspace = true
version = "1.1.2"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 的 core 库"
keywords = ["dominevent", "aggregate", "ddd","dapr"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies_core"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
thiserror = {workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}


log = {workspace =true}


tokio = { workspace = true }

#jwt
jsonwebtoken = "7.2.0"


sha2 = "0.10.6"
base64ct = {version="1.5.3", features=["alloc"]}
surf = {version="^2.1.0",default-features = false,features=["h1-client-rustls","middleware-logger"]}


rbdc = { workspace = true}
salvo = {workspace =true}

[dev-dependencies]

