[package]
name = "genies_dapr"
# version.workspace = true
version = "1.4.0"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 的 dapr 库"
keywords = ["dominevent", "aggregate", "ddd","dapr"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies_dapr"
readme = "README.zh-CN.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
genies_core = { workspace = true }
genies_derive = { workspace = true }


serde = {workspace =true}
serde_json = {workspace =true}


log = {workspace =true}


tokio = { workspace = true }
salvo = {workspace =true}
inventory = { workspace = true }


[dev-dependencies]

