[package]
name = "genies_ddd"
# version.workspace = true
version = "1.1.2"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 的 dd 库"
keywords = ["dominevent", "aggregate", "ddd","dapr"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies_ddd"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
genies_core = { workspace = true }




serde = {workspace =true}
serde_json = {workspace =true}


log = {workspace =true}
uuid = {version="1.2.2",features=["v4"]}

tokio = { workspace = true }
salvo = {workspace =true}

rbatis = {workspace =true} #必选
rbs = {workspace =true}

fastdate = "0.1.38"
[dev-dependencies]

