[package]
name = "genies"
version = "1.0.0"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 兼容基于 Eventuate 的Java 项目 "
keywords = ["dominevent", "aggregate", "ddd","dapr"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbatis = {workspace =true} #必选
rbs = {workspace =true}
rbdc =  {workspace =true}
rbdc-mysql= {workspace =true}

#serde and json
serde =  {workspace =true}
serde_json =  {workspace =true}
serde_yaml = "0.9.14"

chrono = { version = "0.4.23", features = ["serde"] }
#static
lazy_static = "1.4.0"
uuid = {version="1.2.2",features=["v4"]}
#log
log = "0.4.17"
thiserror = {workspace =true}

#fast_log = { version="1.5.47", features = ["lz4","zip", "gzip"]}

tracing = {workspace =true}
tracing-subscriber ={workspace =true}

fastdate = "0.1.38"
#futures
futures = "0.3.25"
#web server
salvo = {version="0.58.3",features=["rustls"]}

tokio = { version = "1.22.0", features = ["full"] }
#yaml-rust = "0"

#async trait
#async-trait = "0.1"
async-trait = "0.1.59"
#async-std = "1.12.0"

#deadpool-runtime = {version="0.1.2",features=["tokio_1"]}
#actix-rt = "2"
#awc = "2.0.3"
#redis
redis = {version = "0.22.1", features = ["async-std-comp"] }
#hyper = { version = "0.14", features = ["full"] }

#dapr = "0.7.2"
#prost = "0.9"

#jwt
jsonwebtoken = "7.2.0"

sha2 = "0.10.6"
base64ct = {version="1.5.3", features=["alloc"]}

#http client,use rust-tls replace to native tls
#reqwest = { version = "0.11",default-features = false, features = ["rustls-tls","json"] }
surf = {version="^2.1.0",default-features = false,features=["h1-client-rustls","middleware-logger"]}


#once_cell = "1.12.0"
#genies_derive = {version="1.0.0", path = "../ddd_dapr_derive", features=["debug_mode"] }
#genies_derive = {version="1.0.0",  features=["debug_mode"] }
genies_derive = {path = "../genies_derive"}
#ddd_dapr_derive = { version="1.0.0", features=["debug_mode"] }

#ddd_dapr_derive = {git="https://tzw:Tdcarefor123@hub.tdcare.cn:6043/tdcare/ddd_dapr_derive.git",branch="salvo"}

[dev-dependencies]
once_cell = "1.12.0"
