[package]
name = "genies_derive"
version = { workspace = true }
edition = "2021"
authors = ["TDcare"]
description = "A powerful derive macro for configuration management in Rust"
license = "MIT"
repository = "https://github.com/tdcare/genies_derive"
documentation = "https://docs.rs/genies_derive"
readme = "README.md"
keywords = ["config", "configuration", "derive", "macro", "settings"]
categories = ["config", "development-tools"]

[lib]
proc-macro = true

[dependencies]
genies_core = { workspace = true }

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = {workspace =true}
serde_yaml = {workspace =true}
thiserror = {workspace =true}
convert_case = "0.6"
async-trait = "0.1"


log = {workspace =true}
paste = "1.0.15"



[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
