[package]
name = "genies_derive"
# version = { workspace = true }
version = "1.4.0"
edition = "2021"
authors = ["TDcare"]
description = "A powerful derive macro for configuration management in Rust"
license = "MIT"
repository = "https://github.com/tdcare/genies_derive"
documentation = "https://docs.rs/genies_derive"
readme = "README.zh-CN.md"
keywords = ["config", "configuration", "derive", "macro", "settings"]
categories = ["config", "development-tools"]

[lib]
proc-macro = true

[dependencies]
genies_core = { workspace = true }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
rust-format = "0.3"

serde = {workspace =true}
serde_yaml = {workspace =true}
thiserror = {workspace =true}
convert_case = "0.6"
async-trait = "0.1"


log = {workspace =true}
paste = "1.0.15"


[features]
debug_mode=[]



[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
