[package]
name = "genies_k8s"
# version.workspace = true
version = "1.4.2"
authors = ["tdcare"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "整合DDD与Dapr 的 k8s 库"
keywords = ["dominevent", "aggregate", "ddd","dapr"]
categories = ["config", "rust-patterns"]
documentation = "https://docs.rs/genies_k8s"
readme = "README.zh-CN.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
genies_context = { workspace = true }


serde = {workspace =true}
serde_json = {workspace =true}


log = {workspace =true}


tokio = { workspace = true }
salvo = {workspace =true}
rbatis = {workspace =true}

[dev-dependencies]

