[package]
name = "integration"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
genies = { workspace = true }
genies_derive = { workspace = true }
genies_cache = { workspace = true }
rbatis = { workspace = true }
rbs = { workspace = true }
rbdc = { workspace = true }
rbdc-mysql = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
rs-snowflake = "0.6"
salvo = { workspace = true }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
